Правки для тестов. https://online.sbis.ru/opendoc.html?guid=88d5dd66-322b-45f7-b886-887086e54a38&des= Задача в разработку 16.06.2017 Требуется перевести на logicless шаблонизатор: html!SBIS3.CONTROLS.BreadCrumbs/resources/itemContent…

--- a/components/ListView/resources/ItemActionsGroup/ItemTpl.tmpl
+++ b/components/ListView/resources/ItemActionsGroup/ItemTpl.tmpl
@@ -4,14 +4,15 @@
       caption="{{caption}}"
       tooltip="{{tooltip}}"
       allowChangeEnable="{{allowChangeEnable}}"
-      class="controls-ItemActions__item {{cssClass}}"
+      class="controls-ItemActions__item {{cssClass ? cssClass}}"
       icon="{{icon && viewMode !== 'caption' ? icon + ' controls-ItemActions__icon'}}"
-      template="{{'js!' + icon && !viewMode ? 'SBIS3.CONTROLS.IconButton' : 'SBIS3.CONTROLS.Link'}}"
+      template="{{'js!' + (icon && !viewMode ? 'SBIS3.CONTROLS.IconButton' : 'SBIS3.CONTROLS.Link')}}"
    />
 </ws:template>
 
 <ws:partial
    template="_itemTpl"
+   icon="{{item.get('icon')}}"
    caption="{{item.get('caption')}}"
    visible="{{item.get('visible')}}"
    tooltip="{{item.get('tooltip')}}"
