--- a/components/ListView/resources/ItemActionsGroup/ItemActionsGroup.tmpl
+++ b/components/ListView/resources/ItemActionsGroup/ItemActionsGroup.tmpl
@@ -5,7 +5,7 @@
          name="itemActionsMenuButton"
          allowChangeEnable="{{false}}"
          visible="{{false}}"
-         command="{{showMenu}}"
+         command="showMenu"
          caption="{[Ещё...]}"
          icon="icon-size icon-ExpandDown icon-primary action-hover"
       />
