стандарт тулбара в престо https://online.sbis.ru/opendoc.html?guid=e09bd55f-a8a9-45a0-b9ec-cf29708ff620&des= Ошибка в разработку 07.08.2017 Редизайн. розница Онлайн. кнопка удаления кода егаис/штрихкода в карточке товара не выровнена по сре…

--- a/components/ListView/resources/ItemsToolbar/ItemsToolbar.less
+++ b/components/ListView/resources/ItemsToolbar/ItemsToolbar.less
@@ -109,9 +109,9 @@
          position: absolute;
          display: block;
          background: @items-toolbar-bottom-style-background no-repeat 0 0;
-         width: 24px;
+         width: @bottomStyle-items-toolbar-width;
          height: @bottomStyle-items-toolbar-height;
-         left: -24px;
+         left: -@bottomStyle-items-toolbar-width;
       }
       .controls-ItemActions .controls-ItemActions__itemsContainer {
          margin-left: -4px;
