https://online.sbis.ru/opendoc.html?guid=e5e9fa8f-7131-4bdb-8b5b-2659733c6dae&des= Ошибка в разработку 08.08.2017 Edge. В меню смайлики обычные, а в тексте цветные Как повторить: Демо_тензор/Демо123 Контакты - +Соо…

--- a/components/RichEditor/RichEditorComponents/RichEditorToolbarBase/RichEditorToolbarBase.less
+++ b/components/RichEditor/RichEditorComponents/RichEditorToolbarBase/RichEditorToolbarBase.less
@@ -47,3 +47,8 @@
       }
    }
 }
+.ws-is-windows-10{
+   .controls-RichEditorToolbar__smilesPicker {
+      font-family: 'TensorFont', sans-serif;
+   }
+}
