Корректные значения флексов LabelContainer в IE https://online.sbis.ru/opendoc.html?guid=98682490-4e17-4c43-b293-aba0b3ca494e 3.17.20/bugfix/labelcontainer-ie10
http://caniuse.com/#feat=flexbox
In IE10 the default value for flex is 0 0 auto rather than 0 1 auto as defined in the latest spec.

--- a/themes/general.less
+++ b/themes/general.less
@@ -180,6 +180,7 @@ input[type="reset"]::-moz-focus-inner {
   }
   .controls-LabelContainer__content {
     .flex-grow(1);
+    .flex-shrink();
     width: 100%;
     min-width: 0;
     display: block;
