--- a/themes/mixins.less
+++ b/themes/mixins.less
@@ -289,6 +289,7 @@
   -ms-flex-wrap: @wrap;
   -webkit-flex-wrap: @wrap;
 }
+// Use .flex-shrink() forced: in IE10-11 flex-shrink is 0 by default (1 is default value defined in the specification)
 .flex-shrink(@shrink: 1) {
    -webkit-flex-shrink: @shrink;
    -ms-flex-negative: @shrink; //ie10
