https://online.sbis.ru/opendoc.html?guid=211bd0c1-1cf9-498c-ac62-45774d8feb61&des= Ошибка в разработку 08.08.2017 Разъехались компоненты внутри CONTROLS.OperationsPanel. Никаких своих стилей не навешиваем - результ…

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -1124,11 +1124,10 @@ body .controls-ItemActions .controls-Button__icon.icon-size {
 //TODO Костыль, т.к. у dropdownList не правильная базовая линия
 //Выпилить, как только dropdownList будет передалан по следующей задаче
 // https://online.sbis.ru/opendoc.html?guid=00f27299-b05b-4732-afeb-a87da885aeb1&des=
-.controls-operationsPanel .controls-DropdownList__selectedItem:before {
-   content: '.';
-   width: 0;
-   height: 0;
+.controls-operationsPanel .controls-DropdownList {
+   line-height: 1.43rem;
 }
-.controls-operationsPanel .controls-DropdownList__selectedItem .controls-IconButton {
-   margin-top: 8px;
+.controls-operationsPanel .controls-DropdownList .controls-IconButton {
+   position: relative;
+   top: 12px;
 }
