--- a/components/WSControls/Lists/resources/ItemTemplate.tmpl
+++ b/components/WSControls/Lists/resources/ItemTemplate.tmpl
@@ -1,6 +1,6 @@
-<div class="controls-ListView__item js-controls-ListView__item {{ _isItemSelected(projItem) ? 'controls-ListView__item__selected' }} {{itemData.hovered ? 'controls-ListView__item__hovered' }} {{ multiSelected ? 'controls-ListView__item__multiSelected' }} {{ className }} "
+<div class="controls-ListView__item js-controls-ListView__item {{ _isItemSelected(projItem) ? 'controls-ListView__item__selected' }} {{itemData.hovered ? 'controls-ListView__item__hovered' }} {{ _isItemMultiSelected(projItem) ? 'controls-ListView__item__multiSelected' }} {{ className }} "
      data-hash="{{ projItem.getHash() }}"
      event:onclick="_onItemClick(projItem)"
-     event:onmousemove="_mouseMove(index)">
+     event:onmousemove="_mouseMove(projItem)">
     <ws:partial template="{{contentTemplate}}" scope="{{...}}" attributes="{{ attributes }}"></ws:partial>
 </div>
