--- a/components/Pager/Pager.tmpl
+++ b/components/Pager/Pager.tmpl
@@ -12,7 +12,7 @@
                         idProperty="id"
                         displayProperty="value"
                 />
-                <span class="controls-Pager-block  controls-text controls-text-extra">&nbsp;по</span>
+                <span class="controls-Pager-block  controls-text controls-text-extra">&nbsp;{[по]}</span>
                 <div class="controls-Pager-block controls-text controls-Amount-text controls-Amount-text_js"></div>
             </td>
             <td class="controls-Pager-block-paging">
