избавляюсь от переопределения шрифтов https://online.sbis.ru/opendoc.html?guid=b2b99898-db92-4da3-a319-6838249fb0f2&des= Ошибка в разработку 01.08.2017 При первом запуске офлайн Престо и переходе в раздел Каталог вместо стандартной иконки открытия появ…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -23,6 +23,9 @@
 @icon-large-size:                         3rem;
 //=============
 @icon-font:                               'carrypresto-icons';
+@default-icon-small-font:                 @icon-font;
+@default-icon-medium-font:                @icon-font;
+@default-icon-large-font:                 @icon-font;
 @default-border-color:                    @accent-color;
 @default-disabled-color:                  @disabled-color;
 @closeButtonWidth:                        3rem;
