--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -7,6 +7,10 @@ body {
    font-size: 1rem !important;
 }
 body {
+  // TODO: оставляем так до 3.17.100 т.к. сейчас стили для icon-16, icon-24 и icon-32 определены в ws
+  .icon-16, .icon-24, .icon-32 {
+    font-family: @icon-font !important;
+  }
    .ws-validation-error > textarea {
       background-color: @text-box-error-bg !important; // перебиваю стили fieldAbstract
    }
