--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -1,4 +1,4 @@
-@import "../carry/variables";
+@import "../online/variables";
 @import "defaults";
 @import "colors";
 @import "sizes";
@@ -1057,3 +1057,6 @@
 @controls-FieldLink-link-color-hover:     @default-hover-color;
 
 @commands-button-close-icon-color:        @icon-color-primary;
+@long-operations-popup-header-line-height:60px;
+@controls-SubmitPopup-footer-border-top:        none;
+@controls-SubmitPopup-footer-bg:                inherit;
