Отктываю правки по задаче https://online.sbis.ru/opendoc.html?guid=5931370e-94e6-4203-a101-67ae9735e5df&des= Merge request 08.08.2017 Регламент: Ошибка в разработку. Автор: Изотова Н.И.Описание: Edge. Карточка подразделения. Обрезаетс…

--- a/components/EditAtPlace/EditAtPlace.less
+++ b/components/EditAtPlace/EditAtPlace.less
@@ -16,6 +16,7 @@
    }
    &.controls-EditAtPlace__ellipsis {
       .controls-EditAtPlace__fieldWrapper {
+         height: inherit;
         .controls-EditAtPlace__textField {
           overflow: hidden;
           white-space: nowrap;
