--- a/components/TextArea/TextArea.less
+++ b/components/TextArea/TextArea.less
@@ -12,7 +12,7 @@
       resize: none;
       overflow: auto;
       display: block;
-      white-space: normal;
+      white-space: pre-wrap; //https://bugzilla.mozilla.org/show_bug.cgi?id=1137650
    }
    .controls-TextArea__view {
       .flex-shrink(0);
