--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -6,7 +6,7 @@
    color: @text-box-color;
    border-width: @default-border-width;
    border-style: @default-border-style;
-   border-color: @text-box-border-color;
+   border-color: @text-box-border-color;/*test*/
    border-bottom-color: @text-box-border-color-bottom;
    background: @text-box-bg;
    font-size: @text-box-font-size;
