https://online.sbis.ru/opendoc.html?guid=5e925548-4b2c-49ef-9da1-dae7481fed9c&des= Ошибка в разработку 01.08.2017 Edge. Карточка подразделения. Обрезается низ у букв в названии Как повторить: Демо_тензор/Демо123 Со…

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -434,3 +434,7 @@
       }
    }
 }
+
+.controls-TabButton__mainText.controls-EditAtPlace__ellipsis  .controls-EditAtPlace__fieldWrapper {
+   height: auto;
+}
