https://online.sbis.ru/opendoc.html?guid=c92e601b-41d6-416b-ab4d-460ad25fc7f7&des= Ошибка в разработку 28.07.2017 Утечка памяти при построении любого складского отчета, с выбором ответственного в фильтрах. test-o…

--- a/components/DataGridView/DataGridView.less
+++ b/components/DataGridView/DataGridView.less
@@ -401,11 +401,9 @@
 }
 
 .controls-DataGridView__scrollingNow {
-  .controls-DataGridView__thead {
-    .controls-DataGridView__scrolledCell {
-      .closedHandCursor();
-    }
-  }
+   .controls-DataGridView__scrolledCell, .controls-DataGridView__PartScroll__thumb {
+      will-change: transform;
+   }
 }
 /****************************************/
 
