LongOperations: UserId проброшен в шаблон через опции

--- a/components/LongOperations/LongOperationsPopup/resources/contentTemplate.xhtml
+++ b/components/LongOperations/LongOperationsPopup/resources/contentTemplate.xhtml
@@ -5,7 +5,7 @@
       <opt name="pageSize" value="4"/>
       <opt name="infiniteScroll" value="null" type="null"/>
       <opt name="className" value="controls-DataGridView__hasSeparator"/>
-      <opt name="userId" value="{{=$ws.single.UserInfo.get('Пользователь')}}"/>
+      <opt name="userId" value="{{=it.userId}}"/>
       <opt name="listName" value="operationListDataGrid"/>
       <!--###<opt name="notShowError" value="true"/>-->
       <opts name="columns">
