https://online.sbis.ru/opendoc.html?guid=266a00b4-3101-41ee-893f-a28dc0de6d1d&des= Ошибка в разработку 11.08.2017 Platforma_3.17.100_regr_test_CONTROLS_ie - Едет верстка в полях связи. Только IE …

--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -37,6 +37,7 @@
 }
 .controls-FieldLink__fieldWrapper {
    .inline-flexbox();
+   .flex-shrink(1);
    position:relative;
    height: 100%;
    width: 100%;
