https://online.sbis.ru/opendoc.html?guid=55b09081-5ce5-437a-bdd0-475ee88531d0&des= Ошибка в разработку 11.08.2017 Platforma_3.17.100_regr_test_CONTROLS_ie - Поехала верстка Slider. Только IE …

--- a/components/SliderInput/SliderInput.less
+++ b/components/SliderInput/SliderInput.less
@@ -14,6 +14,8 @@
    }
    &__input {
       .flex-shrink(1);
+      .flex-basis(0);
+      .flex-grow(1);
    }
    &__label {
       color:#8991A9;
