--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -58,6 +58,7 @@
          visibility:hidden;
          width: 0;
          line-height: @default-base-line-height;
+         display: inline-block;
       }
    }
 
