https://online.sbis.ru/opendoc.html?guid=81f3c85d-88c5-473b-afcf-422ea6a0b25a&des= Ошибка в разработку 11.08.2017 Platforma_3.17.100_regr_test_CONTROLS_ie - Едет верстка когда неактивен MoneyTextBox. Только IE …

--- a/components/MoneyTextBox/MoneyTextBox.less
+++ b/components/MoneyTextBox/MoneyTextBox.less
@@ -12,6 +12,7 @@
   }
 
   .controls-MoneyTextBox__input {
+    .flex-shrink();
     position:relative;
     width: 100%;
     height:100%;
@@ -41,9 +42,4 @@
     }
   }
 
-  &.ws-disabled {
-    .controls-MoneyTextBox__input {
-      display: inline;
-    }
-  }
 }
