--- a/components/ListView/resources/ItemActionsGroup/ItemTpl.tmpl
+++ b/components/ListView/resources/ItemActionsGroup/ItemTpl.tmpl
@@ -18,5 +18,5 @@
    tooltip="{{item.get('tooltip')}}"
    cssClass="{{item.get('cssClass')}}"
    viewMode="{{item.get('toolbarViewMode')}}"
-   cssClallowChangeEnableass="{{item.get('allowChangeEnable')}}"
+   allowChangeEnable="{{item.get('allowChangeEnable')}}"
 />
