https://online.sbis.ru/opendoc.html?guid=e4bedb3a-be35-4001-9b1e-40cad92bdba8&des= Ошибка в разработку 11.08.2017 Platforma_3.17.100_regr_test_CONTROLS_ie - Если выбрать запись. То она обрезается многотчием. Только…

--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -3,7 +3,7 @@
       .inline-flexbox();
       .flex-shrink(0);
       .flex-direction(row-reverse);
-      max-width: calc(100% ~'-' 20px); //todo
+      max-width: ~'calc(100% - '@controls-FieldLink-linkItem-cross-width~')';
       overflow: hidden;
    }
    .controls-FieldLink__linksWrapper {
@@ -30,6 +30,12 @@
 
    }
    &.controls-FieldLink__selected-single {
+      .controls-TextBox__beforeFieldWrapper {
+         width:100%;
+         .controls-FieldLink__linksWrapper {
+            width:100%;
+         }
+      }
       .controls-FieldLinkItemsCollection {
          .justify-content()
       }
