https://online.sbis.ru/opendoc.html?guid=e4bedb3a-be35-4001-9b1e-40cad92bdba8&des= Ошибка в разработку 11.08.2017 Platforma_3.17.100_regr_test_CONTROLS_ie - Если выбрать запись. То она обрезается многотчием. Только…

--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -82,3 +82,4 @@
 @DropdownList-picker-head-padding:                                                                                      0 8px;//todo: krasilnikov
 @DropdownList-picker-head-duplicate-type-top-padding:                                                                   0px;//todo: krasilnikov
 @DropdownList-picker-menu-item-padding:                                                                                 5px 8px 4px 8px;
+@check-box-caption-margin-left:                                                                                         4px;//todo: juravlev
