удаляю дубли в genie
https://online.sbis.ru/opendoc.html?guid=00f27299-b05b-4732-afeb-a87da885aeb1&des=
Задача в разработку 03.08.2017 Собрать демо-страницу с двумя темами оформления и следующими компонентами: SBIS3.CONTROLS.DataGridVi…

--- a/components/FilterButton/FilterButtonArea/FilterButtonArea.less
+++ b/components/FilterButton/FilterButtonArea/FilterButtonArea.less
@@ -118,7 +118,7 @@
 }
 
 .controls-filterButton__historyView-item {
-	cursor: @link-cursor;
+	cursor: pointer;
 	min-height: @controls-filterButton-history-item-min-height;
 }
 
