--- a/components/Link/Link.less
+++ b/components/Link/Link.less
@@ -14,7 +14,7 @@
 
 
   &.controls-Click__active:not(.controls-Link__disabledHover) {
-    cursor: @link-cursor;
+    cursor: pointer;
     color: @link-active-text-color;
     .controls-Button__icon {
       &.icon-primary {
