--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -1,4 +1,4 @@
-@import "../carry/variables";
+@import "../online/variables";
 @import "defaults";
 @import "colors";
 @import "sizes";
@@ -315,24 +315,7 @@
 //Formatted text box
 @formatted-text-box-wrapper-min-height:   @text-box-field-min-height;
 @formatted-text-box-field-padding:        0;
-//Number text box
-@number-text-box-wrapper-margin:          0;
-@number-text-box-arrow-up-height:         .2857rem;
-@number-text-box-arrow-up-margin:         .2857rem 0 0;
-@number-text-box-arrow-up-bg:             transparent;
-@number-text-box-arrow-up-border-width:   0 .2857rem .2857rem .2857rem;
-@number-text-box-arrow-up-border-color:   transparent transparent @primary-color transparent;
-@number-text-box-arrow-up-hover-border-color:transparent transparent darken(@primary-color, 10%) transparent;
-@number-text-box-arrow-up-disabled-bg:    @number-text-box-arrow-up-bg;
-@number-text-box-arrow-up-disabled-border-width:0;
-@number-text-box-arrow-up-disabled-border-color:transparent;
-@number-text-box-arrow-down-margin:       .2142rem 0 0;
-@number-text-box-arrow-down-bg:           transparent;
-@number-text-box-arrow-down-border-width: .2857rem .2857rem 0 .2857rem;
-@number-text-box-arrow-down-border-color: @primary-color transparent transparent transparent;
-@number-text-box-arrow-down-hover-border-color:darken(@primary-color, 10%) transparent transparent transparent;
-@number-text-box-arrow-down-disabled-bg:  @number-text-box-arrow-down-bg;
-@number-text-box-arrow-down-disabled-border-width:    0;
+
 // DateBox
 @date-box-wrapper-border-color:           @text-box-border-color @text-box-border-color @text-box-bottom-border-color @text-box-border-color; // @default-border-color
 @date-box-field-text-color:               @default-text-color;
@@ -370,7 +353,7 @@
 @combo-box-disabled-border-bottom-color:  @default-text-color;
 @combo-box-disabled-color:                #38495B;
 @combo-box-picker-item-padding:           1.14rem 0.57rem 1.14rem 0.57rem;
-@text-box-field-font-size:                1.43rem;
+
 @combo-box-picker-item-bg:                #f0f5fb;
 @combo-box-picker-item-text-color:        #273B4D;
 @combo-box-picker-item-hover-text-color:  #273B4D;
@@ -378,16 +361,6 @@
 @combo-box-picker-item-selected-bg:       @combo-box-picker-item-bg;
 @compo-box-fieldWrapper-margin-right:     3rem;
 @combo-box-after-width:                   3rem;
-
-// Text area
-@text-area-border-color:                  @controls-FieldLink-border-color;
-@text-area-focus-border-color:            @text-box-hover-border-color;
-@text-area-focus-bg:                      @text-box-focus-bg;
-@text-area-hover-bg:                      @text-box-hover-bg;
-@text-area-left-padding:                  .5714rem;
-@text-area-top-padding:                   0.75rem;
-@text-area-right-padding:                 @text-area-left-padding;
-@text-area-bottom-padding:                @text-area-top-padding;
 // Suggest
 @suggest-picker-border:                   @default-border-width solid @default-border-color-second;
 @suggest-picker-color:                    #273B4D;
@@ -416,7 +389,6 @@
 @calendar-day-cell-active-hover-bg:       @calendar-day-cell-hover-bg;
 //fieldlink
 @controls-FieldLink-border:               @default-border-width solid;
-@controls-FieldLink-border-color:         @text-box-border-color @text-box-border-color @text-box-bottom-border-color @text-box-border-color;
 @controls-FieldLink-border-color-focus-hover:@text-box-bottom-border-color;
 @controls-FieldLink-link-color:           #26B8FF;
 @controls-FieldLink-showSelector-color:   @default-text-color;
@@ -900,7 +872,6 @@
 @tab-button-ff-inner-height:              @tab-button-inner-height;
 @tab-button-checked-inner-bg:             transparent;
 //Browser
-@text-box-field-font-size:                1.14rem;
 @controls-Paging-btn-width:               3rem;
 @controls-Paging-btn-height:              3rem;
 @controls-Paging-item-width:              3rem;
