--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -31,7 +31,7 @@
    }
    &.controls-FieldLink__selected-single {
       .controls-TextBox__beforeFieldWrapper {
-         width:100%;
+         .flex-grow(1);
          .controls-FieldLink__linksWrapper {
             width:100%;
          }
