--- a/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
+++ b/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
@@ -11,6 +11,9 @@
          </div>
       </div>
    </div>
+   <ws:if data="{{ virtualScrolling }}">
+      <div class="controls-ListView__virtualScrollTop"></div>
+   </ws:if>
    <div class="controls-CompositeView__itemsContainer {{ viewMode == 'table' ? 'ws-hidden' }}">
       <ws:if data="{{ _serverRender }}">
          <ws:partial template="{{_compositeItemsTemplate}}" records="{{ _records }}" tplData="{{ _itemData }}"/>
@@ -57,6 +60,9 @@
             <span class="controls-ListView__counterValue"></span>
          </span>
       </div>
+   </ws:if>
+   <ws:if data="{{ virtualScrolling }}">
+      <div class="controls-ListView__virtualScrollBottom"></div>
    </ws:if>
    <div class="controls-ListView-scrollIndicator {{infiniteScroll === 'up' ? 'controls-ListView-scrollIndicator__up' : ''}}"></div>
    <div class="controls-ListView__ItemsToolbar-container ws-hidden"></div>
