опечатка в переменной правильная ширина шеврона тулбара https://online.sbis.ru/opendoc.html?guid=7080a2e9-f21f-4322-a7cf-1e7dfc22f734

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2653,7 +2653,7 @@
 @clock-picker-inner-arrow-height:                   @clock-picker-inner-circle-radius - @clock-picker-inner-tick-radius - @clock-picker-arrow-tip-border-width;
 
 @bottomStyle-items-toolbar-height:                  30px;
-@bottomStyle-items-toolbar-width:                   @bottomStyle-items-toolbar-height;
+@bottomStyle-items-toolbar-width:                   24px;
 @bottomStyle-padding-bottom:                        @bottomStyle-items-toolbar-height + @bottomStyle-items-toolbar-margin; //высота операций + маржин
 @bottomStyle-items-toolbar-border-color:            #F3F3F3;
 @bottomStyle-items-toolbar-margin:                  4px;
