https://online.sbis.ru/opendoc.html?guid=7cbe914a-f069-4037-b9c5-09f0dd924e19

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -679,7 +679,7 @@
 @controls-MergeDialogTemplate-treeDataGridView-first-cell-width:            1rem;
 //OperationsPanel
 @controls-OperationsPanel-height:         3.57rem;
-@controls-OperationsPanel-bg:             #F0F5FB;
+@controls-OperationsPanel-bg:             #354B62;
 @controls-OperationsPanel-actions-margin: 0 .2857rem;
 @controls-OperationsPanel-actions-align:  baseline;
 //Пока нет стандарта, выписана подзадача https://online.sbis.ru/opendoc.html?guid=773fe3ec-edf2-434b-ab51-7fdafff585c5&des=
