--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -179,7 +179,7 @@
 @data-grid-partScroll-notScrolledCell-Color:    @default-bg-color;
 @data-grid-results-color:                 #313E78;
 // OperationsPanel
-@controls-OperationsPanel-bg:                       #354B62;
+@controls-OperationsPanel-bg:                       #F0F5FB;
 // OperationsPanelButton
 @controls-OperationsPanelButton-color:    #FFFFFF;
 // DropdownList
