https://online.sbis.ru/opendoc.html?guid=e6a83969-f2cc-4fbf-9447-eb6884ea9978

--- a/components/InformationPopup/InformationPopup.tmpl
+++ b/components/InformationPopup/InformationPopup.tmpl
@@ -1,3 +1,5 @@
 <div class="controls-InformationPopup controls-FloatArea controls-InformationPopup__status-{{status}} {{additionalClass || ''}}">
-   <ws:partial if={{template}} template="{{template}}" scope="{{...}}"></ws:partial>
+   <ws:if data="{{template}}">
+      <ws:partial template="{{template}}" scope="{{...}}"></ws:partial>
+   </ws:if>
 </div>
