--- a/components/NotificationPopup/resources/template.tmpl
+++ b/components/NotificationPopup/resources/template.tmpl
@@ -2,10 +2,14 @@
    <div class="controls-NotificationPopup__header {{closeButton ? 'controls-NotificationPopup__header-withCloseButton'}}">
       <ws:partial template="{{headerTemplate}}" scope="{{...}}"></ws:partial>
    </div>
-   <div if={{bodyTemplate}} class="controls-NotificationPopup__body">
-      <ws:partial template="{{bodyTemplate}}" scope="{{...}}"></ws:partial>
-   </div>
-   <div if={{footerTemplate}} class="controls-NotificationPopup__footer">
-      <ws:partial template="{{footerTemplate}}" scope="{{...}}"></ws:partial>
-   </div>
+   <ws:if data="{{bodyTemplate}}">
+      <div class="controls-NotificationPopup__body">
+         <ws:partial template="{{bodyTemplate}}" scope="{{...}}"></ws:partial>
+      </div>
+   </ws:if>
+   <ws:if data="{{footerTemplate}}">
+      <div class="controls-NotificationPopup__footer">
+         <ws:partial template="{{footerTemplate}}" scope="{{...}}"></ws:partial>
+      </div>
+   </ws:if>
 </div>
