https://online.sbis.ru/opendoc.html?guid=2caae96a-77f3-47d0-b23a-627c9cef2529

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -1024,6 +1024,7 @@
 @money-decorator-integer-no-basic-registry-font-color:@disabled-color;
 @money-decorator-integer-accent-registry-font-color:@default-text-color;
 @money-decorator-integer-no-accent-registry-font-color:@disabled-color;
+@money-decorator-integer-accent-results-font-size: @large-text-size;
 @money-decorator-fraction-font-size:0.8571rem;
 //sundry
 @header-height:                           3rem;
