RichEditor: Изменены стили контекстного меню изображения

--- a/components/RichEditor/RichEditorComponents/RichTextArea/RichTextArea.less
+++ b/components/RichEditor/RichEditorComponents/RichTextArea/RichTextArea.less
@@ -256,3 +256,7 @@
       font-family: 'EmojiFont', 'TensorFont', sans-serif;
    }
 }
+
+.controls-CommandsButton__picker.controls-ImageOptionsPanel__commandsButton__picker .icon-TFDelete:before {
+   content: '\e65c';/*'\e752' '\e66c'*/
+}
