--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -428,11 +428,15 @@
             vertical-align: top;
          }
       }
-      .controls-TabButton__additionalText2 .controls-EditAtPlace {
-         position: relative;
-         top: -1px;
-      }
    }
+}
+.ws-is-ie {
+  .controls-TabButton {
+    .controls-TabButton__additionalText2 .controls-EditAtPlace {
+      position: relative;
+      top: -1px;
+    }
+  }
 }
 
 .controls-TabButton__mainText.controls-EditAtPlace__ellipsis  .controls-EditAtPlace__fieldWrapper {
