RichEditor: Изменены стили контекстного меню изображения (2)

--- a/components/RichEditor/RichEditorComponents/RichTextArea/resources/ImageOptionsPanel/ImageOptionsPanel.tmpl
+++ b/components/RichEditor/RichEditorComponents/RichTextArea/resources/ImageOptionsPanel/ImageOptionsPanel.tmpl
@@ -64,7 +64,7 @@
                   <ws:String>delete</ws:String>
                </ws:id>
                <ws:icon>
-                  <ws:String>sprite:icon-16 icon-TFDelete icon-error</ws:String>
+                  <ws:String>sprite:icon-16 icon-Erase icon-error</ws:String>
                </ws:icon>
                <ws:title>
                   <ws:String>{[Удалить]}</ws:String>
