DateRangeBigChoose: Поправил темы
https://online.sbis.ru/opendoc.html?guid=14871e73-61d2-443b-895a-12da42a4a3c4

--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -419,7 +419,7 @@
          width: @date-range-big-choose-months-range-width;
          .range-vertical-button-bar-mixin();
 
-         span.controls-Button {
+         span.controls-Button.controls-Button__default {
             .inline-flexbox();
             .justify-content(flex-start);
             .align-items(center);
