--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -954,11 +954,11 @@ body .controls-DateRangeBigChoose .controls-DateRangeBigChoose__dates .controls-
    padding-left: 0;
    text-align: center;
    &:hover {
-      background: transparent!important;
       border-top: none!important;
       border-bottom: none!important;
       border-right-color: #3f566d!important;
    }
+   line-height: 1.786rem;
    .controls-Button__text {
       width: 100%;
    }
