DatePicker: Если опция включения иконки была выключена, то не запускалась логика определения какой пикер должен открываться в соответсвии с выбранной маской.
https://online.sbis.ru/opendoc.html?guid=22c9f1f1-232f-4989-95e2-4b7ab4e6c522&des=
Ошибка в разработку 26.07.2017 Ошибка в консоли при смене даты как повторить: 1. Нажать + вебинар 2. Сменить дату вебинара резу…

--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -214,6 +214,9 @@
       }
    }
 }
+.ws-is-desktop-safari .controls-AjaxLoader {
+   height: 100%;
+}
 
 .controls-AjaxLoader__outer{
    display: none;
