т.к. нижняя граница рисуется в том же элементе, то визуально элемент становится меньше по высоте делаем отступ на ширину border https://online.sbis.ru/opendoc.html?guid=4bb41de8-453a-4d8c-ab3b-23deb7700709

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1798,6 +1798,9 @@
 @data-grid-cell-border-width:                   1px 0;
 @data-grid-cell-separator-color:                #F5F5F5;
 @data-grid-edge-cell-separator-color:           #EAEAEA;
+@data-grid-edge-cell-separator-bottom-padding:  3px;
+@data-grid-edge-cell-separator-line-height:     @data-grid-cell-line-height;
+
 @data-grid-cell-border-style:                   solid;
 @data-grid-cell-border-color:                   transparent;
 
