https://online.sbis.ru/opendoc.html?guid=7bbfbe27-974f-413d-81f9-97b725347c48

--- a/components/Suggest/resources/SuggestShowAll/SuggestShowAll.xhtml
+++ b/components/Suggest/resources/SuggestShowAll/SuggestShowAll.xhtml
@@ -11,6 +11,7 @@
             <opts name="itemsActions" type="array"></opts>
             <opt name="pageSize">20</opt>
             <opt name="infiniteScroll" type="boolean">true</opt>
+            <opt name="itemsDragNDrop">{{=it.itemsDragNDrop}}</opt>
         </component>
     </div>
 </div>
