--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -214,7 +214,9 @@
       }
    }
 }
-.ws-is-desktop-safari .controls-AjaxLoader {
+// На webkit из-за особенностей верстки в данном месте, несмотря на то что у абсолютно спозиционированного
+// контенера заданы top и bottom, высота все равно равна 0 а не высоте контенера. Устанавливаем высоту через height: 100%;
+.ws-is-webkit .controls-AjaxLoader {
    height: 100%;
 }
 
