--- a/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
+++ b/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
@@ -233,6 +233,10 @@
     background: #FBEEEF;
 }
 
+.controls-LongOperationsPopup .controls-ItemActions .controls-ItemActions__itemsContainer .controls-ItemActions__item {
+    padding-top: 4px;
+}
+
 /* End content */
 
 /* Footer*/
