Перевел FilterPanelButton на svg. Теперь на любом масштабе красота сказочная просто. https://online.sbis.ru/opendoc.html?guid=f9c3d795-234b-40f9-941d-24f383fc9b55

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -142,14 +142,14 @@
 
 @button-without-caption-icon-32-left:     7px;
 
-@FilterPanelButtonRightClose: url('img/FilterPanelButton.png') 0 0;
-@FilterPanelButtonLeftClose: url('img/FilterPanelButton.png') -35px 0;
-@FilterPanelButtonRightOpen: url('img/FilterPanelButton.png') -70px 0;
-@FilterPanelButtonLeftOpen: url('img/FilterPanelButton.png') -105px 0;
-@FilterPanelButtonHoverRightClose: url('img/FilterPanelButton.png') 0 24px;
-@FilterPanelButtonHoverLeftClose: url('img/FilterPanelButton.png') -35px 24px;
-@FilterPanelButtonHoverRightOpen: url('img/FilterPanelButton.png') -70px -24px;
-@FilterPanelButtonHoverLeftOpen: url('img/FilterPanelButton.png') -105px -24px;
+@FilterPanelButtonRightClose: url('img/FilterPanelButton.svg') 0 0;
+@FilterPanelButtonLeftClose: url('img/FilterPanelButton.svg') -35px 0;
+@FilterPanelButtonRightOpen: url('img/FilterPanelButton.svg') -70px 0;
+@FilterPanelButtonLeftOpen: url('img/FilterPanelButton.svg') -105px 0;
+@FilterPanelButtonHoverRightClose: url('img/FilterPanelButton.svg') 0 24px;
+@FilterPanelButtonHoverLeftClose: url('img/FilterPanelButton.svg') -35px 24px;
+@FilterPanelButtonHoverRightOpen: url('img/FilterPanelButton.svg') -70px -24px;
+@FilterPanelButtonHoverLeftOpen: url('img/FilterPanelButton.svg') -105px -24px;
 
 // ------------------ //
 // FilterPanelChooser //
