--- a/components/IconButton/IconButton.less
+++ b/components/IconButton/IconButton.less
@@ -115,12 +115,6 @@
    }
 }
 .controls-IconButton__filter {
-   &-left-open, &-left-close, &-right-open, &-right-close {
-      height: 24px;
-      width: 35px;
-      cursor: pointer;
-      display: inline-block;
-   }
    &-left-close {
       background: @FilterPanelButtonLeftClose;
       &:hover {
@@ -143,6 +137,15 @@
       background: @FilterPanelButtonRightOpen;
       &:hover {
          background: @FilterPanelButtonHoverRightOpen;
+      }
+   }
+   &-left-open, &-left-close, &-right-open, &-right-close {
+      height: 24px;
+      width: 35px;
+      cursor: pointer;
+      display: inline-block;
+      &, &:hover {
+         background-size: 140px 48px;
       }
    }
 }
