--- a/themes/presto/variables.less
+++ b/themes/presto/variables.less
@@ -72,14 +72,14 @@
 @button-text-padding:                     0;                        // padding of text
 @button-empty-text-margin:                0 0 0 13px !important;    // margin of empty text
 
-@FilterPanelButtonRightClose: url('img/FilterPanelButton.png') 0 0;
-@FilterPanelButtonLeftClose: url('img/FilterPanelButton.png') -35px 0;
-@FilterPanelButtonRightOpen: url('img/FilterPanelButton.png') -70px 0;
-@FilterPanelButtonLeftOpen: url('img/FilterPanelButton.png') -105px 0;
-@FilterPanelButtonHoverRightClose: url('img/FilterPanelButton.png') 0 24px;
-@FilterPanelButtonHoverLeftClose: url('img/FilterPanelButton.png') -35px 24px;
-@FilterPanelButtonHoverRightOpen: url('img/FilterPanelButton.png') -70px -24px;
-@FilterPanelButtonHoverLeftOpen: url('img/FilterPanelButton.png') -105px -24px;
+@FilterPanelButtonRightClose: url('img/FilterPanelButton.svg') 0 0;
+@FilterPanelButtonLeftClose: url('img/FilterPanelButton.svg') -35px 0;
+@FilterPanelButtonRightOpen: url('img/FilterPanelButton.svg') -70px 0;
+@FilterPanelButtonLeftOpen: url('img/FilterPanelButton.svg') -105px 0;
+@FilterPanelButtonHoverRightClose: url('img/FilterPanelButton.svg') 0 24px;
+@FilterPanelButtonHoverLeftClose: url('img/FilterPanelButton.svg') -35px 24px;
+@FilterPanelButtonHoverRightOpen: url('img/FilterPanelButton.svg') -70px -24px;
+@FilterPanelButtonHoverLeftOpen: url('img/FilterPanelButton.svg') -105px -24px;
 
 // ------------------ //
 // FilterPanelChooser //
