--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -90,10 +90,10 @@
 @button-text-margin-right:                .57rem;
 @button-text-padding:                     0;                        // padding of text
 @button-icon-color-hover:                 #B9E9FF;
-@FilterPanelButtonHoverRightClose:        url('img/FilterPanelButton.png') 0 0.86rem;
-@FilterPanelButtonHoverLeftClose:         url('img/FilterPanelButton.png') -1.25rem 0.86rem;
-@FilterPanelButtonHoverRightOpen:         url('img/FilterPanelButton.png') -2.5rem -0.86rem;
-@FilterPanelButtonHoverLeftOpen:          url('img/FilterPanelButton.png') -3.75rem -0.86rem;
+@FilterPanelButtonHoverRightClose:        url('img/FilterPanelButton.svg') 0 0.86rem;
+@FilterPanelButtonHoverLeftClose:         url('img/FilterPanelButton.svg') -1.25rem 0.86rem;
+@FilterPanelButtonHoverRightOpen:         url('img/FilterPanelButton.svg') -2.5rem -0.86rem;
+@FilterPanelButtonHoverLeftOpen:          url('img/FilterPanelButton.svg') -3.75rem -0.86rem;
 @closeButtonImage:                        url('img/areaBigCloseButton.png') 0 0;
 @closeButtonImageHover:                   url('img/areaCloseButton.png') 0 -3rem;
 //FilterPanelChooser
