переход на новую структуру кнопок https://online.sbis.ru/opendoc.html?guid=94167afb-b52d-4eb5-9c13-82b78617c070

--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -419,7 +419,7 @@
          width: @date-range-big-choose-months-range-width;
          .range-vertical-button-bar-mixin();
 
-         a.controls-Button.controls-Button__default {
+         a.controls-Button {
             .inline-flexbox();
             .justify-content(flex-start);
             .align-items(center);
@@ -435,7 +435,7 @@
             background-color: transparent;
             .controls-Button__wrapper {
                padding: 0;
-               .justify-content(@date-range-big-choose-months-text-align);
+               .justify-content(flex-start);
             }
 
             &:first-child {
