--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -443,6 +443,7 @@
 @date-range-icon-button-line-height:      @date-range-icon-button-size;
 @date-range-icon-button-top:              0;
 @date-range-icon-button-margin:           0;
+@date-range-big-choose-header-date-box-font-size: 1rem;
 
 //Data Range Slider
 @date-range-slider-color:                 #26B8FF;
@@ -503,8 +504,6 @@
 @date-range-big-choose-date-range-picker-bg-boundary-selected-color:    #26B8FF;
 @date-range-big-choose-date-range-picker-bg-selected-color:             @date-range-big-choose-bg-hovered-color;
 @date-range-big-choose-date-range-picker-bg-hovered-color:              @date-range-big-choose-bg-hovered-color;
-@date-range-big-choose-months-text-align:                               center;
-@date-range-big-choose-months-padding:                                  0px;
 
 @date-range-big-choose-years-height:      3.57rem;
 @date-range-big-choose-header-padding:    0.256rem 0 0.256rem 0;
@@ -514,6 +513,7 @@
 @date-range-big-choose-header-date-box-border-color:           @text-box-border-color;
 @date-range-big-choose-header-date-box-border-selected-color:  @text-box-bottom-border-color;
 @date-range-big-choose-header-date-pickers-margin-right:3.286rem;
+@date-range-big-choose-date-range-picker-caption-font-size: @default-font-size;
 @date-range-big-choose-header-date-picker-margin-top:0;
 @date-range-big-choose-header-apply-button-size:3rem;
 @date-range-big-choose-header-apply-button-font-size:@date-range-big-choose-header-apply-button-size;
