--- a/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
+++ b/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
@@ -233,8 +233,8 @@
     background: #FBEEEF;
 }
 
-.controls-LongOperationsPopup .controls-ItemActions .controls-ItemActions__itemsContainer .controls-ItemActions__item {
-    padding-top: 4px;
+.controls-LongOperationsPopup .controls-ItemActions .controls-ItemActions__itemsContainer .controls-ItemActions__item .controls-ItemActions__icon {
+    vertical-align: bottom;
 }
 
 /* End content */
