https://online.sbis.ru/opendoc.html?guid=d195dd27-0d5e-47ca-be6c-229f7164288b

--- a/components/SubmitPopup/resources/template.tmpl
+++ b/components/SubmitPopup/resources/template.tmpl
@@ -29,7 +29,7 @@
       <div class="controls-SubmitPopup__buttonContainer">
          <ws:if data="{{status === 'confirm' || useConfirmButtons}}">
             <ws:partial
-               primary={{true}}
+               primary="{{true}}"
                name="positiveButton"
                allowChangeEnable="{{false}}"
                caption="{{positiveButton.caption}}"
