фикс выравнивания в ФФ https://online.sbis.ru/opendoc.html?guid=8c4ddf88-5c65-4540-b9e2-ecd6b02f1226

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -403,7 +403,7 @@
         line-height: @tab-button-ff-inner-height;
      }
      &.controls-TabButton__main-item .controls-TabButton__inner{
-        line-height: 26px;
+        line-height: @tab-button-main-text-line-height;
      }
      &.controls-TabButton__main-item {
         .controls-TabButton__additionalText1, .controls-TabButton__additionalText1 > * {
