--- a/components/FieldLink/afterFieldWrapper.tmpl
+++ b/components/FieldLink/afterFieldWrapper.tmpl
@@ -7,13 +7,25 @@
         tabindex="0"
         activableByClick="{{ false }}"
     />
-    <ws:SBIS3.CONTROLS.IconButton
-        name="fieldLinkMenu"
-        cssClassName="controls-FieldLink__showSelector"
-        icon="icon-16 icon-size icon-ListView"
-        tabindex="0"
-        command="showSelector"
-    />
+   <ws:if data="{{ menuSelector }}">
+      <ws:SBIS3.CONTROLS.MenuIcon
+            name="fieldLinkMenu"
+            cssClassName="controls-FieldLink__showSelector"
+            icon="icon-16 icon-size icon-ListView icon-primary action-hover"
+            tabindex="0"
+            displayProperty="caption"
+            idProperty="caption"
+            />
+   </ws:if>
+   <ws:else>
+      <ws:SBIS3.CONTROLS.IconButton
+            name="fieldLinkMenu"
+            cssClassName="controls-FieldLink__showSelector"
+            icon="icon-16 icon-size icon-ListView"
+            tabindex="0"
+            command="showSelector"
+            />
+   </ws:else>
     <ws:SBIS3.CONTROLS.Action.SelectorAction
        if="{{ useSelectorAction }}"
        name="FieldLinkSelectorAction"
