https://online.sbis.ru/opendoc.html?guid=b18f3587-7688-4cb4-94ef-39c4c7fb66d0

--- a/components/WSControls/VDOM/Main/Main.tmpl
+++ b/components/WSControls/VDOM/Main/Main.tmpl
@@ -25,7 +25,7 @@
                         event:onEdit="onEditItem(item)"
                         event:onRemove="onRemoveItem(item)"
                         event:onToggle="onToggleCompleted(item)"
-                        key="{{ index }}"
+                        __key="{{ item.title }}"
                 />
             </ws:for>
         </ul>
