--- a/components/Button/Button.less
+++ b/components/Button/Button.less
@@ -18,7 +18,7 @@
          }
       }
       &primary {
-         color: @button-text-color;
+         color: @button-primary-text-color;
          background: @button-primary-bg-color;
          border-color: @button-primary-border-color;
          &:active:not(.ws-disabled) {
@@ -30,7 +30,7 @@
       на класс controls-Button__primary завязаны прикладники и тесты
    */
    &.controls-Button__primary {
-      color: @button-text-color;
+      color: @button-primary-text-color;
       background: @button-primary-bg-color;
       border-color: @button-primary-border-color;
       &:active:not(.ws-disabled) {
