--- a/components/Button/Button.less
+++ b/components/Button/Button.less
@@ -8,6 +8,10 @@
    min-width: @button-min-width;
    line-height: normal;
 
+   &:active {
+      text-decoration: none !important;
+   }
+
    &.controls-Button-color__ {
       &default {
          color: @button-text-color;
@@ -112,5 +116,8 @@
             background: @button-primary-hover-bg;
          }
       }
+   }
+   .controls-Button:hover {
+      text-decoration: none !important;
    }
 }
