--- a/components/WSControls/Buttons/Button.tmpl
+++ b/components/WSControls/Buttons/Button.tmpl
@@ -1,7 +1,7 @@
-<span class="controls-ButtonBase {{!visible ? ' ws-hidden'}}" title="{{tooltip}}" disabled="{{!enabled ? 'disabled'}}" type="button">
+<a class="controls-ButtonBase {{!visible ? ' ws-hidden'}}" title="{{tooltip}}" disabled="{{!enabled ? 'disabled'}}" type="button">
     <ws:if data="{{ caption || icon }}">
         <span class="controls-Button__wrapper">
             <ws:partial template="{{contentTemplate}}" scope="{{...}}"></ws:partial>
         </span>
     </ws:if>
-</span>
+</a>
