--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -299,6 +299,9 @@ body {
       background-size: 0.2142rem;
    }
 }
+.ws-float-area-nostack-panel-overflow .ws-float-close.sbisname-window-title-close, .ws-float-close.sbisname-window-title-close {
+   top: .2857rem!important;
+}
 
 .ws-float-close.sbisname-window-title-close,
 body .ws-field-button.ws-button-classic.sbisname-window-title-close.ws-enabled {
