--- a/components/Button/Button.less
+++ b/components/Button/Button.less
@@ -114,3 +114,12 @@
       }
    }
 }
+
+@-moz-document url-prefix() {
+   .controls-Button__text {
+      height: @button-text-height-ff;
+   }
+   .controls-Button__big .controls-Button__text {
+      height: auto;
+   }
+}
