--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -270,6 +270,8 @@
 @button-large-border-radius:                                                                                            24px;
 @button-large-font-size:                                                                                                18px;
 
+@button-text-height-ff:                                                                                                 20px;
+
 
 // ------------ //
 // Button group //
