правки по старой теме поехало из-за переверстки полей ввода https://online.sbis.ru/opendoc.html?guid=ebabc6cf-85a8-45cd-b687-76e490b10635

--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -466,6 +466,7 @@
 // ----------- //
 
 @search-background:                             #FFFFFF;
+@search-border-color-active:                    #CCCCCC;
 @search-disabled-background:                    none;
 @search-focus-background:                       @text-box-focus-bg;
 @search-left-margin:                            8px;
@@ -477,7 +478,7 @@
 @search-hover-border-color:                     @text-box-bottom-border-color;
 @search-bottom-border-color:                    @text-box-bottom-border-color;
 @search-form-disabled-border-bottom:            1px solid @text-box-disabled-border-bottom;
-@search-form-icon-padding:                      11px 0 0 0;
+@search-form-icon-padding:                      0;
 @search-form-icon-disabled-display:             none;
 @search-loop-size:                              32px;
 
