Всегда видны checkbox https://online.sbis.ru/opendoc.html?guid=bcc6970f-1846-4680-bb3e-ba75e7c0b5a4

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -493,10 +493,13 @@ body {
 }
 
 
-.controls-DropdownList__picker {
+body .controls-DropdownList__picker {
    .controls-DropdownList__itemCheckBox{
       top: 0.6rem;
       padding-right: 0.2rem;
+   }
+   .controls-DropdownList__multiselect .controls-DropdownList__itemCheckBox {
+      visibility: visible;
    }
    .controls-DropdownList__buttonsBlock.controls-DropdownList__multiselect {
       min-width: 8rem;
