DateBox: Пропало нижнее подчеркивание у неактивного поля ввода дат.
https://online.sbis.ru/opendoc.html?guid=39010833-39fc-4250-a2db-67d054687fab

--- a/components/DateBox/DateBox.less
+++ b/components/DateBox/DateBox.less
@@ -57,6 +57,7 @@
          border-style: @date-box-wrapper-disabled-border-style;
          border-color: @date-box-wrapper-disabled-border-color;
          background: @date-box-wrapper-disabled-bg;
+         border-bottom-color: @text-box-border-color-bottom-disabled;
       }
    }
 }
