LongOperations: Стиль кнопок ItemsActions

--- a/components/LongOperations/LongOperationsList/LongOperationsList.less
+++ b/components/LongOperations/LongOperationsList/LongOperationsList.less
@@ -87,3 +87,8 @@
    text-overflow: ellipsis;
     /*###white-space: nowrap;*/
 }
+
+.controls-LongOperationsList .controls-ItemActions .controls-ItemActions__itemsContainer .controls-ItemActions__item .controls-ItemActions__icon {
+    vertical-align: bottom;
+    margin-bottom: 0px;
+}
