--- a/components/LongOperations/LongOperationsRegistry/LongOperationsRegistry.less
+++ b/components/LongOperations/LongOperationsRegistry/LongOperationsRegistry.less
@@ -121,4 +121,8 @@
    .ws-sticky-header__block.ws-sticky-header__fixed.controls-Browser__table {
       z-index: 3;
    }
+
+   .controls-LongOperationsList .controls-ItemActions .controls-ItemActions__itemsContainer .controls-ItemActions__item .controls-ItemActions__icon {
+      margin-bottom: 3px;
+   }
 }
